kubernetes/cluster/active/apps/media/streamystats/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: streamystats
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Jellyfin statistics and watch history dashboard.
    gethomepage.dev/group: Media
    gethomepage.dev/icon: streamystats.svg
    gethomepage.dev/name: StreamyStats
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=streamystats,app.kubernetes.io/controller=frontend"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "stats.${FQDN_01}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /setup
        - path:
            type: Exact
            value: /api/servers
          method: POST
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 302
            path:
              type: ReplaceFullPath
              replaceFullPath: /
    - backendRefs:
        - group: ""
          kind: Service
          name: streamystats-frontend
          namespace: streamystats
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
